// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component match snapshot with primary variant 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-19k5i17"
    type="button"
  >
    Click me primary
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`Button Component match snapshot with secondary variant 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-1l4yr35"
    type="button"
  >
    Click me secondary
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
